force-app/main/default/objects/Opportunity/fields/Customer_Verifier_12__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verifier_12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Verifier 12</label>
    <type>Checkbox</type>
</CustomField>