force-app/main/default/objects/Opportunity/fields/Customer_Verifier_Usage_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verifier_Usage_Number__c</fullName>
    <formula>(IF (  Customer_Verifier_Usage__c &gt; 0 ,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Verifier Used?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>