force-app/main/default/objects/Opportunity/fields/Data_Center_Service_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Service_Completion_Date__c</fullName>
    <label>Data Center Service Completion Date</label>
    <type>Date</type>
</CustomField>