force-app/main/default/objects/Opportunity/fields/Data_Center_Site__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Site__c</fullName>
    <inlineHelpText>1 = existing site 
F = future site</inlineHelpText>
    <label>Data Center Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMS-1</fullName>
            </value>
            <value>
                <fullName>Atlanta-F</fullName>
                <label>ATL-F</label>
            </value>
            <value>
                <fullName>Phoenix</fullName>
                <label>AZP-1</label>
            </value>
            <value>
                <fullName>Scottsdale</fullName>
                <label>AZS-1</label>
            </value>
            <value>
                <fullName>Boston-1</fullName>
                <label>BOS-1</label>
            </value>
            <value>
                <fullName>CHI-1</fullName>
            </value>
            <value>
                <fullName>Charlotte-F</fullName>
                <label>CLT-F</label>
            </value>
            <value>
                <fullName>Denver-F</fullName>
                <label>DEN-1</label>
            </value>
            <value>
                <fullName>Dallas-F</fullName>
                <label>DFW-F</label>
            </value>
            <value>
                <fullName>Kansas City</fullName>
                <label>KCM-1</label>
            </value>
            <value>
                <fullName>LAS-F</fullName>
            </value>
            <value>
                <fullName>LON-1</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
                <label>NJE-1</label>
            </value>
            <value>
                <fullName>NYC/NJ-F</fullName>
                <label>NYC-F</label>
            </value>
            <value>
                <fullName>Ohio</fullName>
                <label>OHS-1</label>
            </value>
            <value>
                <fullName>Chicago-F</fullName>
                <label>ORD-F</label>
            </value>
            <value>
                <fullName>OR-F</fullName>
            </value>
            <value>
                <fullName>Other-F</fullName>
            </value>
            <value>
                <fullName>RNO-F</fullName>
            </value>
            <value>
                <fullName>Seattle-F</fullName>
                <label>SEA-F</label>
            </value>
            <value>
                <fullName>Salt Lake City-F</fullName>
                <label>SLC-F</label>
            </value>
            <value>
                <fullName>SNG-1</fullName>
            </value>
            <value>
                <fullName>Toronto-F</fullName>
                <label>TOR-1</label>
            </value>
            <value>
                <fullName>DC/N.VA-F</fullName>
                <label>VA-1</label>
            </value>
            <value>
                <fullName>VA-2</fullName>
            </value>
            <value>
                <fullName>Boyers-1</fullName>
                <label>WPA-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>