force-app/main/default/objects/Opportunity/fields/Date_Lost__c.field-meta.xml
<CustomField>
    <fullName>Date_Lost__c</fullName>
    <label>Date Lost</label>
    <type>Date</type>
</CustomField>