force-app/main/default/objects/Opportunity/fields/Days_at_Stage_5__c.field-meta.xml
<CustomField>
    <fullName>Days_at_Stage_5__c</fullName>
    <formula>IF( 
      AND(
                TEXT(StageName)=&quot;5 - Signed/PO in&quot;,
                LEN(TEXT(NCSP_Status__c ))=0
               ),
         TODAY()- IM_Stage_5_Entered_Date__c, 
         Sent_to_NCSP_Date__c -IM_Stage_5_Entered_Date__c
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days at Stage 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>