force-app/main/default/objects/Opportunity/fields/DBU_Data_Management_Sales_Specialist__c.field-meta.xml
<CustomField>
    <fullName>DBU_Data_Management_Sales_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DBU Data Management Sales Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesNi4E</relationshipName>
    <type>Lookup</type>
</CustomField>