force-app/main/default/objects/Opportunity/fields/DBU_Director_In_My_Number__c.field-meta.xml
<CustomField>
    <fullName>DBU_Director_In_My_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clari - Used for reporting
35869 : Opportunity: Create and Update &quot;In My Number&quot; fields to support Forecasting - PLNI0016874</description>
    <label>Digital Director - In My Number</label>
    <type>Checkbox</type>
</CustomField>