force-app/main/default/objects/Opportunity/fields/Deal_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Booked_Date__c</fullName>
    <description>Records the date the opportunity was officially recognized as booked.</description>
    <inlineHelpText>This field is opulated automatically when the opportunity reaches the Booked stage.</inlineHelpText>
    <label>Deal Booked Date</label>
    <type>Date</type>
</CustomField>