force-app/main/default/objects/Opportunity/fields/Deal_Close_Date_Locked__c.field-meta.xml
<CustomField>
    <fullName>Deal_Close_Date_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>lock the deal close date so further modification cannot be done</description>
    <label>Deal Close Date Locked</label>
    <type>Checkbox</type>
</CustomField>