force-app/main/default/objects/Opportunity/fields/Deal_Review_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Accepted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Deal_Review__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Deal_Review__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <filterItems>
            <field>Deal_Review__c.Deal_Review_Expired__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deal_Review__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>