force-app/main/default/objects/Opportunity/fields/Deal_Size_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Grouping__c</fullName>
    <formula>IF(Amount &lt; 5000,&quot;Band 1&quot;,
IF(Amount &gt;=5000 &amp;&amp; Amount &lt;25000,&quot;Band 2&quot;,
IF(Amount &gt;=25000 &amp;&amp; Amount &lt;100000,&quot;Band 3&quot;,
IF(Amount &gt;=100000 &amp;&amp; Amount &lt;250000,&quot;Band 4&quot;,
IF(Amount &gt;=250000 &amp;&amp; Amount &lt;500000,&quot;Band 5&quot;,
IF(Amount &gt;=500000 &amp;&amp; Amount &lt;1000000,&quot;Band 6&quot;,
&quot;Band 7&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size Grouping</label>
    <type>Text</type>
</CustomField>