force-app/main/default/objects/Opportunity/fields/Deal_Validation__c.field-meta.xml
<CustomField>
    <fullName>Deal_Validation__c</fullName>
    <label>Booking Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Hold-Pending Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>