force-app/main/default/objects/Opportunity/fields/Decision_Process_Defined__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer&apos;s decision-making process, stakeholders, and approval path have been identified.</description>
    <inlineHelpText>Select Yes after understanding how the customer will evaluate and approve the purchase decision.</inlineHelpText>
    <label>Decision Process Defined</label>
    <type>Checkbox</type>
</CustomField>