force-app/main/default/objects/Opportunity/fields/Delay_Category__c.field-meta.xml
<CustomField>
    <fullName>Delay_Category__c</fullName>
    <description>#35845 - Opportunity: Capture most recent Delay Reason from SBF lines - PLNI0016296</description>
    <label>Delay Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External 3rd party Transportation Delays</fullName>
            </value>
            <value>
                <fullName>External - ALM Program non-mandated</fullName>
            </value>
            <value>
                <fullName>External Customer Delay</fullName>
            </value>
            <value>
                <fullName>External Customer put the project on hold</fullName>
            </value>
            <value>
                <fullName>External - Resolved</fullName>
            </value>
            <value>
                <fullName>External Scope change</fullName>
            </value>
            <value>
                <fullName>External - Shred/RM Program non-mandated</fullName>
            </value>
            <value>
                <fullName>External Vendor Delay</fullName>
            </value>
            <value>
                <fullName>Internal - Account Setup Delay</fullName>
            </value>
            <value>
                <fullName>Internal - Annual Billing</fullName>
            </value>
            <value>
                <fullName>Internal - Billing in Research</fullName>
            </value>
            <value>
                <fullName>Internal - Contract Delay</fullName>
            </value>
            <value>
                <fullName>Internal- DS Cleanup</fullName>
            </value>
            <value>
                <fullName>Internal IT delays</fullName>
            </value>
            <value>
                <fullName>Internal Labor Delay</fullName>
            </value>
            <value>
                <fullName>Internal Operations Delay</fullName>
            </value>
            <value>
                <fullName>Internal- Prepaid</fullName>
            </value>
            <value>
                <fullName>Internal - Quarterly Billing</fullName>
            </value>
            <value>
                <fullName>Internal Resolved</fullName>
            </value>
            <value>
                <fullName>Internal-RM/Shred Upsell</fullName>
            </value>
            <value>
                <fullName>Internal SBF start date is not realistic</fullName>
            </value>
            <value>
                <fullName>Internal- Sold to bill at the end/completion of project</fullName>
            </value>
            <value>
                <fullName>Internal Supply Delay</fullName>
            </value>
            <value>
                <fullName>Internal Transportation Delays</fullName>
            </value>
            <value>
                <fullName>Internal-W&amp;L Upsell</fullName>
            </value>
            <value>
                <fullName>Internal Will begin at the completion of a prior phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>