force-app/main/default/objects/Opportunity/fields/Desired_Future_State_Determined__c.field-meta.xml
<CustomField>
    <fullName>Desired_Future_State_Determined__c</fullName>
    <label>Desired Future State Determined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Boolean</valueSetName>
    </valueSet>
</CustomField>