force-app/main/default/objects/Opportunity/fields/Digital_Deal_Archetype__c.field-meta.xml
<CustomField>
    <fullName>Digital_Deal_Archetype__c</fullName>
    <description>This field is a flag for opportunities that require an additional layer of attention from stakeholders</description>
    <label>Digital Deal Archetype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BPO / Managed Services</fullName>
            </value>
            <value>
                <fullName>Custom Software solution</fullName>
            </value>
            <value>
                <fullName>Global opp / Multi region</fullName>
            </value>
            <value>
                <fullName>IDP with HITL</fullName>
            </value>
            <value>
                <fullName>Large Volume / Low Margin</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partner with Revenue Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>