force-app/main/default/objects/Opportunity/fields/Digital_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Digital_of_Total__c</fullName>
    <label>Digital % of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>