force-app/main/default/objects/Opportunity/fields/DL_VC__Has_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>DL_VC__Has_Value_Proposition__c</fullName>
    <formula>DL_VC__Value_Proposition_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Value Proposition</label>
    <type>Checkbox</type>
</CustomField>