force-app/main/default/objects/Opportunity/fields/DM_Quad_2_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Quad_2_Account__c</fullName>
    <formula>IF (ISPICKVAL(Account.Account_Segment__c, &quot;Vertical&quot;) || (ISPICKVAL(Account.Account_Segment__c, &quot;Global&quot;)) &amp;&amp; (ISPICKVAL( Account.Account_Sub_Segment__c, &quot;Energy&quot;) || ISPICKVAL( Account.Account_Sub_Segment__c, &quot;Government&quot;) || ISPICKVAL( Account.Account_Sub_Segment__c, &quot;Global&quot;)) &amp;&amp; (NOT(ISBLANK(Account.Primary_BDE_DB_R__c)) &amp;&amp; NOT(ISBLANK(Account.Primary_CDE_DB_R__c))), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>DM Quad 2 Account</label>
    <type>Text</type>
</CustomField>