force-app/main/default/objects/Opportunity/fields/DMS_Exception__c.field-meta.xml
<CustomField>
    <fullName>DMS_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked used to track exceptions to the DMS approval process.</description>
    <label>DMS Exception</label>
    <type>Checkbox</type>
</CustomField>