force-app/main/default/objects/Opportunity/fields/DMS_Location__c.field-meta.xml
<CustomField>
    <fullName>DMS_Location__c</fullName>
    <label>DMS Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Baltimore / Washington</fullName>
            </value>
            <value>
                <fullName>Baltimore / Washington - RMS</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Carlsbad</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Cleveland</fullName>
            </value>
            <value>
                <fullName>Colorado Springs</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Columbus - RMS</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Denver - RMS</fullName>
            </value>
            <value>
                <fullName>Des Moines</fullName>
            </value>
            <value>
                <fullName>Detroit</fullName>
            </value>
            <value>
                <fullName>Detroit - RMS</fullName>
            </value>
            <value>
                <fullName>East Tennessee</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>El Paso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>