force-app/main/default/objects/Opportunity/fields/Eligible_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Annual_Amount__c</fullName>
    <description>Captures the annual contract value eligible for reporting, programs, or incentive calculations.</description>
    <inlineHelpText>The annual amount that qualifies based on the applicable business rules.</inlineHelpText>
    <label>Eligible Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>