force-app/main/default/objects/Opportunity/fields/Eligible_for_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Negotiation__c</fullName>
    <formula>/* North America - United States */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;North America&quot;) &amp;&amp; ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;United States&quot;),
  IF(Amount &gt;= 250000, true, false),

/* North America - Canada */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;North America&quot;) &amp;&amp; ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Canada&quot;),
  IF(Amount &gt;= 250000, true, false),

/* Europe - England */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;Europe&quot;) &amp;&amp; ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;England&quot;),
  IF(Amount &gt;= 250000, true, false),

/* Europe - NOT England */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;Europe&quot;) &amp;&amp; !ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;England&quot;),
  IF(Amount &gt;= 100000, true, false),

/* MENAT */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;MENAT&quot;),
  IF(Amount &gt;= 50000, true, false),

/* LATAM */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;LATAM&quot;),
  IF(Amount &gt;= 25000, true, false),

/* INDIA */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;INDIA&quot;),
  IF(Amount &gt;= 25000, true, false),

/* APAC - Singapore */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;APAC&quot;) &amp;&amp; ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Singapore&quot;),
  IF(Amount &gt;= 100000, true, false),

/* APAC - Hong Kong, Macau, South Korea, Taiwan, Vietnam */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;APAC&quot;) &amp;&amp;
  (
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Hong Kong&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;South Korea&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Taiwan&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Vietnam&quot;)
  ),
  IF(Amount &gt;= 50000, true, false),

/* APAC - China, Indonesia, Malaysia, Philippines, Thailand */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;APAC&quot;) &amp;&amp;
  (
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;China&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Indonesia&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Malaysia&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Philippines&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Thailand&quot;)
  ),
  IF(Amount &gt;= 25000, true, false),

/* APAC - Australia, New Zealand */
IF(
  ISPICKVAL(IM_Legal_Entity__r.Region__c, &quot;APAC&quot;) &amp;&amp;
  (
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;Australia&quot;) ||
    ISPICKVAL(IM_Legal_Entity__r.Country__c, &quot;New Zealand&quot;)
  ),
  IF(Amount &gt;= 250000, true, false),

/* Default */
false
)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Negotiation</label>
    <type>Checkbox</type>
</CustomField>