force-app/main/default/objects/Opportunity/fields/Exclude_from_Win_Loss_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Win_Loss_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All Opportunities are included in win loss feedback unless indicated by the seller</description>
    <label>Exclude From Win Loss Feedback</label>
    <type>Checkbox</type>
</CustomField>