force-app/main/default/objects/Opportunity/fields/Executed_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Executed_Agreement_Uploaded__c</fullName>
    <description>Indicates whether the fully executed customer agreement has been uploaded and is available for reference.</description>
    <inlineHelpText>Select Yes after the signed agreement has been uploaded to the appropriate record.</inlineHelpText>
    <label>Executed Agreement Uploaded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Boolean</valueSetName>
    </valueSet>
</CustomField>