force-app/main/default/objects/Opportunity/fields/First_Bill_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Booked_Date__c</fullName>
    <description>CloseDate formerly First Bill Date, Booked Date is now First Bill Date.</description>
    <formula>if( Sales_Segment__c = &quot;Digital&quot;,  CloseDate ,  IM_Booked_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Bill / Booked Date</label>
    <type>Date</type>
</CustomField>