force-app/main/default/objects/Opportunity/fields/First_Bill_Date_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date_Booked_Date__c</fullName>
    <description>CloseDate formerly First Bill Date, Booked Date is now First Bill Date.</description>
    <formula>If (CloseDate &lt;CloseDate , &quot;WRONG&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Bill Date &lt; Booked Date</label>
    <type>Text</type>
</CustomField>