force-app/main/default/objects/Opportunity/fields/Flag_for_Removal__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Sales Operations for pipeline cleanup initiative IMNA only</description>
    <label>Flag for Removal</label>
    <type>Checkbox</type>
</CustomField>