force-app/main/default/objects/Opportunity/fields/Forecast_Owner__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesNFKI</relationshipName>
    <type>Lookup</type>
</CustomField>