force-app/main/default/objects/Opportunity/fields/Framework_Booked_Amount__c.field-meta.xml
<CustomField>
    <fullName>Framework_Booked_Amount__c</fullName>
    <description>FW-05 (IRM_Touch_Level_Classification_SDD Section 2.5): aggregated booked value at the Framework Parent level, summed from linked child Opportunities in Setup or Booked stage, for Sales Ops reporting visibility.</description>
    <inlineHelpText>Total Amount from all linked child Opportunities in Setup or Booked stage. Maintained automatically by Flow — do not edit directly.</inlineHelpText>
    <label>Framework Booked Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>