force-app/main/default/objects/Opportunity/fields/Framework_Status__c.field-meta.xml
<CustomField>
    <fullName>Framework_Status__c</fullName>
    <label>Framework Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>