force-app/main/default/objects/Opportunity/fields/Free_Storage_Period__c.field-meta.xml
<CustomField>
    <fullName>Free_Storage_Period__c</fullName>
    <label>Free Storage Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>0 months</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>