force-app/main/default/objects/Opportunity/fields/Fuel_Surcharge_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Waiver__c</fullName>
    <label>Fuel Surcharge Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>