force-app/main/default/objects/Opportunity/fields/GCP_Co_Sell_ID__c.field-meta.xml
<CustomField>
    <fullName>GCP_Co_Sell_ID__c</fullName>
    <description>To capture the co-sell ID from Google via Tackle</description>
    <label>GCP Co-Sell ID</label>
    <type>TextArea</type>
</CustomField>